perf(engine): link kind ids at publish and drive facts by demand (ADR-0039)
Make the documented hot-path contract literally true with two coupled
changes.

LINK STAGE. EffectRegistry/SelectorRegistry now assign a dense kindId per
head in registration order and expose idOf + kindsById()/selectorsById().
The compiler stamps that id onto every CompiledEffect and CompiledSelector
at lower time via an injected ToIntFunction (the same seam that already
injects affinityOf), so the model stays pure. AbilityExecutor dispatches
by array index (kinds[effect.kindId()]) — no per-execution toUpperCase, no
map lookup, no Optional on the hot path. A -1 sentinel or an out-of-range
id (a hand-built test effect, or a brand-new add-on head in the window
before the executor is rebound) falls back to a head lookup, so nothing
breaks and the warn-and-skip behaviour is preserved. The effect + selector
kinds are bound as ONE atomic LinkedContent reference, replacing the two
independent volatile fields, so a reader can never see a torn
effects-from-build-N / selectors-from-build-N+1 mix; built-in ids are
prefix-stable across reloads (fixed registration order, add-ons append).

DEMAND-DRIVEN FACTS. Each ability now carries a FactMask (one long per
fact space: numbers/flags/strings) derived at compile time from its
condition AST and expression-valued effect args — the exact slots the only
two runtime readers (ConditionEvaluator, NumExprEval) touch. WornState
folds a per-trigger union of these masks once per equip change, and
FactPopulator computes ONLY the referenced slots. The expensive derived
facts — the %nearbyenemies% 8-block AABB scan, %actor.groundblock% block
lookup, %distance%/%victim.inzone% — are mask-gated, so an armored player
whose worn conditions never mention them pays nothing per trigger pass.
clear() still zeroes every slot, so an unreferenced slot reads its default,
never a stale value; a slot >= 64 degrades the mask to ALL (populate
everything) rather than aliasing a bit.

